# fnord

./: Cargo.toml  LICENSE  README.md
src/core/: mod.rs
src/core/geometry/: align.rs  align_impl.rs  anchor_impl.rs  aspect_ratio_impl.rs  cardinal_impl.rs  dims.rs  direction_impl.rs  grid.rs  grid_impl.rs  margin_impl.rs  mod.rs  nine_slice_impl.rs  padding_impl.rs  placement_impl.rs  pos.rs  pos_impl.rs  prelude.rs  quadtree_impl.rs  rect.rs  rect_impl.rs  size.rs  size_impl.rs  util_impl.rs
src/core/math/: functions.rs  mod.rs
tests/: core_geometry_cardinal_tests.rs
